Multi-level menu in components.class.php. Need to be moved to the _menusf.php view.

--- a/Kwetter/web/index.xhtml
+++ b/Kwetter/web/index.xhtml
@@ -3,9 +3,36 @@
       xmlns:h="http://java.sun.com/jsf/html"
       xmlns:f="http://java.sun.com/jsf/core"
       xmlns:ui="http://java.sun.com/jsf/facelets"
-      template="/WEB-INF/templates/default.xhtml">
-    <ui:define name="content">
+      template="/WEB-INF/templates/homepage.xhtml">
+    <ui:define name="tweets">
 
+        <table cellpadding="0" cellspacing="0">
+            <tr>
+                <td>
+                    <p>Tweet one</p>
+                    <p>5 seconds ago </p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>Tweet one</p>
+                    <p>5 seconds ago </p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>Tweet one</p>
+                    <p>5 seconds ago </p>
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <p>Tweet one</p>
+                    <p>5 seconds ago </p>
+                </td>
+            </tr>
+        </table>
+        
     </ui:define>
 </ui:composition>
 
