--- a/Kwetter/web/followers.xhtml
+++ b/Kwetter/web/followers.xhtml
@@ -5,6 +5,10 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 template="/WEB-INF/templates/homepage.xhtml"
                 xmlns:c="http://java.sun.com/jsp/jstl/core">
+    <ui:define name="login">
+        <a href="profile.jsf?user=#{userBean.user.name}">LOGIN</a>
+    </ui:define>
+    
     <ui:define name="S0">
         <h:outputText value="#{userBean.user.name}"></h:outputText>
     </ui:define>
