--- a/Kwetter/web/profile.xhtml
+++ b/Kwetter/web/profile.xhtml
@@ -5,4 +5,25 @@
                 xmlns:ui="http://java.sun.com/jsf/facelets"
                 template="/WEB-INF/templates/personal.xhtml"
                 xmlns:c="http://java.sun.com/jsp/jstl/core">
+    <ui:define name="search">
+        **hier zou het search veld eigenlijk moeten staan**
+        
+    </ui:define>
+    <ui:define name="S1">
+        <h:form>
+            <p>Search</p>
+            <h:inputText value="#{searchBean.filter}" id="filter">
+                <f:ajax event="keyup" execute="filter" render="table"/>
+            </h:inputText>
+            <h:dataTable id="table" value="#{searchBean.searchedTweets}" var="tweet">
+                <h:column>#{tweet.tweet}</h:column>
+            </h:dataTable>
+        </h:form>
+    </ui:define>
+    <ui:define name="S2">
+        <p>Name: #{userBean.user.name}</p>
+        <p>Location: </p>
+        <p>Web: <a href="#{userBean.user.web}">#{userBean.user.web}</a></p>
+        <p>Bio: #{userBean.user.bio}</p>
+    </ui:define>
 </ui:composition>
