--- a/Kwetter/web/profile.xhtml
+++ b/Kwetter/web/profile.xhtml
@@ -6,19 +6,44 @@
                 template="/WEB-INF/templates/personal.xhtml"
                 xmlns:c="http://java.sun.com/jsp/jstl/core">
     <ui:define name="search">
-        **hier zou het search veld eigenlijk moeten staan**
-        
-    </ui:define>
-    <ui:define name="S1">
         <h:form>
             <p>Search</p>
             <h:inputText value="#{searchBean.filter}" id="filter">
-                <f:ajax event="keyup" execute="filter" render="table"/>
+                <f:ajax event="keyup" execute="filter" render=":searchForm"/>
             </h:inputText>
-            <h:dataTable id="table" value="#{searchBean.searchedTweets}" var="tweet">
-                <h:column>#{tweet.tweet}</h:column>
-            </h:dataTable>
+        </h:form>        
+    </ui:define>
+    <ui:define name="S0">
+        <h:form>
+            <h:inputText value="#{tweetBean.tweet}" id="tweet"></h:inputText>
+            <h:commandButton value="Submit" id="tweetButton" action="#{tweetBean.postNewTweet('hans')}">
+                <f:ajax event="action" execute="tweet"/>
+            </h:commandButton>            
         </h:form>
+    </ui:define>
+    <ui:define name="S1">
+        <div id="tabs">
+            <ul>
+                <li><a href="#timeline">Timeline</a></li>
+                <li><a href="#mentions">Mentions</a></li>
+            </ul>
+            <div id="timeline">
+                <h:form id="searchForm">
+                    <h:dataTable value="#{searchBean.searchedTweets}" var="tweet">
+                        <h:column>#{tweet.tweet}</h:column>
+                    </h:dataTable>
+                </h:form>
+            </div>
+            <div id="mentions">
+                blaat
+                <!--<h:form id="tweetForm">
+                    <h:dataTable value="{tweetBean.getTweets}" var="tweet">
+                        <h:column>{tweet.tweet}</h:column>
+                    </h:dataTable>
+                </h:form>-->
+            </div>
+
+        </div>
     </ui:define>
     <ui:define name="S2">
         <p>Name: #{userBean.user.name}</p>
