--- a/Kwetter/web/profile.xhtml
+++ b/Kwetter/web/profile.xhtml
@@ -65,7 +65,7 @@
     <ui:define name="S4">
         <h:form>
             <h:dataTable value="#{tweetBean.trends}" var="item">
-                <h:column><p>#{item.toString}</p></h:column>
+                <h:column><p>#{item}</p></h:column>
             </h:dataTable>
         </h:form>
     </ui:define>
