--- a/Kwetter/web/newxhtml.xhtml
+++ b/Kwetter/web/newxhtml.xhtml
@@ -7,5 +7,7 @@
                 xmlns:c="http://java.sun.com/jsp/jstl/core">
     <ui:define name="login">
         <p>#{userBean.user.name}</p>
+        <p>Follower count: #{statsBean.followerCount}</p>
+        <p>Following count: #{statsBean.followingCount}</p>
     </ui:define>
 </ui:composition>
